Fix spacing for log in item in menu

--- a/web.bitRepublic/client/sass/layout/_layout.scss
+++ b/web.bitRepublic/client/sass/layout/_layout.scss
@@ -55,3 +55,8 @@ body {
   }
 }
 
+// Variation for container--login-box
+// Hide it by default (should display on click on log in)
+.container--login-box {
+  display: none;
+}
